test/bad/automatic/extension/class/compile_time/0011.lat
class janusz {
  int andrzej;
}

class zygmunt extends janusz {
  int krystyna;
}

int main() {
  zygmunt zygmunt = new janusz;
  return zygmunt.krystyna;
}
